syntax = "proto3";

option java_package = "org.scion.jpan.proto.endhost";

package endhost.api_service.v1;

import "scion/protobuf/control_plane/v1/seg.proto";

// List segments request.
message ListSegmentsRequest {
  // The source ISD-AS of the final end-to-end path. This is most likely
  // the requester's own ISD-AS.
  uint64 src_isd_as = 1;

  // The destination ISD-AS the final end-to-end path.
  uint64 dst_isd_as = 2;

  // The maximum total number of segments to return.
  // The service may return fewer than this value.
  // If unspecified, the maximum number of segments
  // per page is returned, which is 64.
  int32 page_size = 3;

  // A page token, received from a previous
  // ListSegmentsRequest call.
  // Provide this to retrieve the subsequent page.
  //
  // When paginating, all other parameters provided in
  // ListSegmentsRequest must match the call that provided
  // the page token.
  string page_token = 4;
}

// ListSegmentsReponse includes up, down, and core path segments that
// can be combined to end-to-end paths.
message ListSegmentsResponse {
  // The list of returned up path segments.
  repeated proto.control_plane.v1.PathSegment up_segments = 1;

  // The list of returned down path segments.
  repeated proto.control_plane.v1.PathSegment down_segments = 2;

  // The list of returned core path segments.
  repeated proto.control_plane.v1.PathSegment core_segments = 3;

  // The token for the next page of results.
  string next_page_token = 4;
}
